# imagegen

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/imagegen-usage/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: configuration.md  development.md  install.md  optimization-plan.md  user-guide.md
docs/feedback/: imagegen工具使用反馈与优化建议.md
docs/superpowers/plans/: 2026-05-08-code-review-fixes.md  2026-05-10-imagegen-optimization.md
docs/superpowers/specs/: 2026-05-10-optimization-plan-review-design.md
references/: comparison.md  nanobanana-cookbook-guide.md  nanobanana-pro.md  nanobanana.md  nanobanana2.md
src/imagegen/: __init__.py  __main__.py  chat.py  cli.py  generate.py  models.py  provider.json.example  provider.py  session.py  template.py
src/imagegen/backends/: __init__.py  genai.py  openai.py
tests/: test_backends_genai.py  test_backends_openai.py  test_prompt_quotes.py  test_provider.py  test_session.py  test_template.py
